# netop

./: .gitignore  README-CN.md  README.md  pyproject.toml
.github/workflows/: pypi.yml
src/netop/: __init__.py  collector.py  main.py
tests/: test_collector.py  test_main.py
